# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
